--- a/springboot-rest/src/main/resources/templates/execSql.html
+++ b/springboot-rest/src/main/resources/templates/execSql.html
@@ -20,11 +20,14 @@
 <script type="text/javascript" src="/jqgrid/js/i18n/grid.locale-cn.js"></script>
 <script type="text/javascript" src="/js/md5.js"></script>
 <style type="text/css">
+	#content{margin-left: 1%}
 	#grid{width: 60%}
+	
 </style>
 </head>
 <body>
 <body>
+<div id="content">
 	操作人ID：
 	<input type="text" id="execId" placeholder="请输入操作人ID..."
 		autocomplete="off" style="width: 30%; height: 33px;"></input>
@@ -47,6 +50,7 @@
 		<!-- jqgrid表格 -->
 		<div id="jqGridPager"></div>
 		<!-- 表格页脚 -->
-	</div>
+	</div> 
+</div>
 </body>
 </html>
