--- a/springboot-rest/src/main/resources/templates/execSql.html
+++ b/springboot-rest/src/main/resources/templates/execSql.html
@@ -20,37 +20,51 @@
 <script type="text/javascript" src="/jqgrid/js/i18n/grid.locale-cn.js"></script>
 <script type="text/javascript" src="/js/md5.js"></script>
 <style type="text/css">
-	#content{margin-left: 1%}
-	#grid{width: 60%}
-	
+#content_left {
+	/* margin-left: 1%; */
+	width: 60%;
+	float: left;
+}
+
+#content_right {
+	/* margin-left: 1%; */
+	width: 38%;
+	float: left;
+}
+
+#grid {
+	width: 100%
+}
+
 </style>
 </head>
 <body>
 <body>
-<div id="content">
-	操作人ID：
-	<input type="text" id="execId" placeholder="请输入操作人ID..."
-		autocomplete="off" style="width: 30%; height: 33px;"></input>
-	<br>
-	<br>
-	<textarea name="sql"
-		style="width: 60%; height: 160px; font-size: 20px;" id="sqlTextArea"
-		placeholder="输入SQL语句..."></textarea>
-	<br>
-	<button type="submit" id="sure" style="width: 103px; height: 33px"
-		onclick="clickButtSure();">执行</button>
-	<button id="back" type="reset" style="width: 103px; height: 33px"
-		onclick="clickButtEmpty()">清空</button>
-	<br>
-	<hr
-		style="background-color: #0c0c0c; height: 1px; width: 60%; margin-left: 0px;">
-	<br>
-	<div id="grid">
-		<table id="jqGrid"></table>
-		<!-- jqgrid表格 -->
-		<div id="jqGridPager"></div>
-		<!-- 表格页脚 -->
-	</div> 
-</div>
+	<div id="content_left">
+		操作人ID： <input type="text" id="execId" placeholder="请输入操作人ID..."
+			autocomplete="off" style="width: 30%; height: 33px; font-size: 16px;"></input>
+		<br> <br>
+		<textarea name="sql"
+			style="width: 100%; height: 160px; font-size: 20px;" id="sqlTextArea"
+			placeholder="输入SQL语句..."></textarea>
+		<br>
+		<button type="submit" id="sure" style="width: 103px; height: 33px"
+			onclick="clickButtSure();">执行</button>
+		<button id="back" type="reset" style="width: 103px; height: 33px"
+			onclick="clickButtEmpty()">清空</button>
+		<br> <br>
+		<hr
+			style="background-color: #0c0c0c; height: 0px; width: 100%; margin-left: 0px;">
+		<div id="resut_exec"></div>
+		<div id="grid">
+			<table id="jqGrid"></table>
+			<!-- jqgrid表格 -->
+			<div id="jqGridPager"></div>
+			<!-- 表格页脚 -->
+		</div>
+	</div>
+	<div id="content_right">
+	</div>
+
 </body>
 </html>
