--- a/springboot-rest/src/main/resources/templates/execSql.html
+++ b/springboot-rest/src/main/resources/templates/execSql.html
@@ -29,6 +29,8 @@
 
 #content_right {
 	/* margin-left: 1%; */
+	
+    margin-top: 35px;
 	width: 38%;
 	float: left;
 	overflow: auto;
@@ -61,7 +63,6 @@
 			style="background-color: #0c0c0c; height: 0px; width: 100%; margin-left: 0px;">
 		<div id="resut_exec"></div>
 		<div id="grid">
-			 <input type="button" id="bsdata" value="Search" />
 			<!-- jqgrid表格 -->
 			<table id="jqGrid"></table>
 			<!-- 表格页脚 -->
